# simple-tools

./: .gitignore  README.md  build.sh  main.c  main.cpp  read_elf.c  read_elf.h
bril-interpreter/: .gitignore  meson.build
bril-interpreter/src/: interpreter.cpp  main.cpp  opcode.hpp
fat/: build.sh  fat.c  fat.h  main.c  path.c  run.sh
fat32/: main.c  run.sh
simple-fs/: .gitignore  README.md
simple-fs/fat/: build.sh  fat.c  fat.h  main.c
simple-jit/: .gitignore  meson.build
simple-jit/src/: emitter.cpp  emitter.h  main.cpp  parser.cpp  parser.h  utils.cpp
simple-jit/subprojects/: .gitignore  libsjp.wrap
simple-jit/test/: Makefile  add.bril  add.json  print.bril  print.json  print_cmp.bril  test.s  test_emitter.cpp
simple-shell/: README.md  meson.build
simple-shell/src/: builtins.cpp  main.cpp
simple-stack-tracer/: README.md  build.sh  read_elf.c
use-and-defs/: main.py
uses-and-defs/: README.md  main.py  risc-v.asm  risc-v2.asm  run_linux.sh
